# rick_and_morty_async

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
rick_and_morty_async/: __main__.py  client.py  consts.py  parser.py  tracker.py
template_cli/: main.py
test/int/: test_client.py
test/integration/: test_main.py
test/ua/: test_main.py
test/unit/: test_client.py  test_parser.py
tests/: conftest.py  test_client.py  test_parser.py
