[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.0.1"
dependencies = [
    "retry-async",
    "funcy",
    "httpx",
    "httpx[http2]",
    "ownjoo-toolkit",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
